samples/bookinfo/networking/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: "/ziomaleniesplae"
    route:
      - destination:
          host: "dupa.preview.splunkbase.splunk.com"
          port:
            number: 443
  - route:
    - destination:
        host: "staging.preview.splunkbase.splunk.com"
        port:
          number: 443
    rewrite:
      authority: "staging.preview.splunkbase.splunk.com"
